yaml-manifests/production-cluster/traefik/traefik-ingress-route-fleet-websecure.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch-ingress-websecure
  namespace: elastic-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`demo.fl.34.172.125.225.ip.es.io`)
    kind: Rule
    middlewares:
    - name: redirect-to-https
      namespace: elastic-prod
    services:
    - name: fleet-server-prod-agent-http
      port: 8220
      scheme: https
      namespace: elastic-prod
      serversTransport: traefik-servers-transport

  tls:
    secretName: fleet-server-prod-agent-http-certs-internal
    domains:
    - sans:
      - "demo.fl.34.172.125.225.ip.es.io"
