yaml-manifests/production-cluster/traefik/traefik-ingress-route-kibana-websecure.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-ingress-websecure
  namespace: elastic-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`demo.kb.34.172.125.225.ip.es.io`)
    kind: Rule
    middlewares:
    - name: redirect-to-https
      namespace: elastic-prod
    services:
    - name: kibana-mon-kb-http
      port: 5601
      scheme: https
      namespace: elastic-prod
      serversTransport: traefik-servers-transport

  tls:
    secretName: kibana-mon-kb-http-certs-internal
    domains:
    - sans:
      - "demo.kb.34.172.125.225.ip.es.io"
